--- a/term05/BASE/08-Dicts/sem08.ipynb
+++ b/term05/BASE/08-Dicts/sem08.ipynb
@@ -12,14 +12,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "id": "ede999a2-d407-40fd-8571-930f001d6d73",
    "metadata": {
     "id": "8RmUe6t18ZP6"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'jan': 31, 'february': 28, 'mar': 31, 'apr': 30, 'may': 31, 'jun': 30, 'jul': 31, 'aug': 31, 'sep': 30, 'oct': 31, 'nov': 30, 'dec': 31}\n"
+     ]
+    }
+   ],
    "source": [
-    "# my code here"
+    "# months = {}\n",
+    "# for _ in range(12):\n",
+    "#     month, days = input().split()\n",
+    "#     months[month] = int(days)\n",
+    "monthlist = 'jan february mar apr may jun jul aug sep oct nov dec'\n",
+    "dayslist = '31 28 31 30 31 30 31 31 30 31 30 31'\n",
+    "print(dict(zip(monthlist.split(), [int(d) for d in dayslist.split()])))"
    ]
   },
   {
@@ -34,14 +48,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "id": "e9e72ce2-fc7c-4909-b87f-ee5169cc0d68",
    "metadata": {
     "id": "C22uKHWM8dQZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     jan:  31\n",
+      "february:  28\n",
+      "     mar:  31\n",
+      "     apr:  30\n",
+      "     may:  31\n",
+      "     jun:  30\n",
+      "     jul:  31\n",
+      "     aug:  31\n",
+      "     sep:  30\n",
+      "     oct:  31\n",
+      "     nov:  30\n",
+      "     dec:  31\n"
+     ]
+    }
+   ],
    "source": [
-    "# my code here"
+    "months = {month: int(day) for month, day in zip(monthlist.split(), dayslist.split())}\n",
+    "lon = max(len(k)for k in months.keys())\n",
+    "for m, d in months.items():\n",
+    "    print(f'{m:>{lon}}: {d:>3}') # > < выравнивание по краю"
    ]
   },
   {
@@ -56,14 +92,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "id": "b1dec136-d772-4dd4-90bd-e74dc96e078b",
    "metadata": {
     "id": "ZmW5fut28i5B"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(dict_keys(['jan', 'february', 'mar', 'apr', 'may', 'jun', 'jul', 'aug', 'sep', 'oct', 'nov', 'dec']),\n",
+       " dict_values([31, 28, 31, 30, 31, 30, 31, 31, 30, 31, 30, 31]))"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# my code here"
+    "months.keys(), months.values()"
    ]
   },
   {
@@ -83,9 +131,35 @@
    "metadata": {
     "id": "ibuhHTmU8vo4"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{31: ['jan', 'mar', 'may', 'jul', 'aug', 'oct', 'dec'],\n",
+       " 28: ['february'],\n",
+       " 30: ['apr', 'jun', 'sep', 'nov']}"
+      ]
+     },
+     "execution_count": 24,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# my code here"
+    "from collections import defaultdict\n",
+    "# days = dict()\n",
+    "# for m, d in months.items():\n",
+    "    # if d in days:\n",
+    "    #     days[d].append(m)\n",
+    "    # else:\n",
+    "    #     days[d] = [m]\n",
+    "    #2 way\n",
+    "    # days.setdefault(d, []).append(m)\n",
+    "#3 way\n",
+    "days = defaultdict(list)\n",
+    "for m, d in months.items():\n",
+    "    days[d].append(m)\n",
+    "dict(days)"
    ]
   },
   {
@@ -107,7 +181,13 @@
    },
    "outputs": [],
    "source": [
-    "# my code here"
+    "ruseng = {'кошка': 'cat', 'звонить': 'call'}\n",
+    "while True:\n",
+    "    word, translation = input().split()\n",
+    "    if word == 'stop':\n",
+    "        break\n",
+    "    ruseng.setdefault(word, []).append(translation)\n",
+    "ruseng"
    ]
   },
   {
@@ -122,14 +202,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "6a2f3f8b-83f4-4a44-afac-30d92ce8d739",
    "metadata": {
     "id": "lLOzVJB583XZ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "     текст:   4\n",
+      "      слов:   2\n",
+      "         в:   1\n",
+      "   длинный:   1\n",
+      "     много:   1\n",
+      "       мой:   1\n",
+      "       нем:   1\n",
+      "     очень:   1\n",
+      "прекрасный:   1\n",
+      "    разных:   1\n",
+      "   хороший:   1\n",
+      "       это:   1\n"
+     ]
+    }
+   ],
    "source": [
-    "# my code here"
+    "from collections import Counter\n",
+    "text = input()\n",
+    "text = [word.strip('.,?!:;()\"').lower() for word in text.split()]\n",
+    "count = Counter(text)\n",
+    "lon = max(len(k)for k in count.keys())\n",
+    "for k, v in sorted(count.items(), key=lambda x: (-x[1], x[0])):\n",
+    "    print(f'{k:>{lon}}: {v:>3}')"
    ]
   },
   {
@@ -146,14 +251,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "b197b21d-b9b1-4a6a-bc9e-59aa1a820bf0",
    "metadata": {
     "id": "pHDg8luU-WfJ"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'огурцова': '3263'}\n",
+      "{'огурцова': '3263', 'сухонина': '8903'}\n",
+      "{'огурцова': '9876', 'сухонина': '8903'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "tel_book = dict()\n",
+    "while True:\n",
+    "    surname = input('surname: ')\n",
+    "    if surname == 'хватит':\n",
+    "        break\n",
+    "    tel_book[surname] = input('number: ')\n",
+    "    print(tel_book)"
    ]
   },
   {
@@ -178,14 +299,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "3f60206e-5348-482b-8b54-11ace01a54c4",
    "metadata": {
     "id": "0KSgVR6f_8Y7"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'call': ['звать', 'звонить', 'называть'], 'name': ['имя', 'называть']}\n",
+      "звать: call\n",
+      "звонить: call\n",
+      "имя: name\n",
+      "называть: ['call', 'name']\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "call = ['звать', 'звонить', 'называть']\n",
+    "name = ['имя', 'называть']\n",
+    "eng_rus = dict()\n",
+    "eng_rus['call'] = call\n",
+    "eng_rus['name'] = name\n",
+    "print(eng_rus)\n",
+    "\n",
+    "rus_eng = dict()\n",
+    "for word in eng_rus:\n",
+    "    for trans in eng_rus[word]:\n",
+    "        if trans not in rus_eng:\n",
+    "            rus_eng[trans] = word\n",
+    "        else:\n",
+    "            temp = list()\n",
+    "            temp.append(rus_eng[trans])\n",
+    "            temp.append(word)\n",
+    "            rus_eng[trans] = sorted(temp)\n",
+    "for k in sorted(rus_eng.keys()):\n",
+    "    print(f'{k}: {rus_eng[k]}')"
    ]
   },
   {
@@ -209,7 +360,7 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "text = input()\n"
    ]
   },
   {
@@ -323,7 +474,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -337,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
