--- a/term05/BASE/07-Sets/sem07.ipynb
+++ b/term05/BASE/07-Sets/sem07.ipynb
@@ -104,12 +104,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "id": "d03022fa-a8b8-4b9b-becb-d631706571fb",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 12, 18]\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "l1 = [3, 6, 9, 12, 15, 18]\n",
+    "l2 = [2, 4, 6, 8, 10, 12, 14, 16, 18]\n",
+    "x = set(l1) & set(l2)\n",
+    "print(sorted(x))"
    ]
   },
   {
@@ -126,22 +137,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "b209b6ca-259e-4962-b0fc-d8638a79ab37",
    "metadata": {
     "id": "DFZmiBRSQJQ2"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['Насигоренг', 'индон', 'и', 'малайск', 'nasi', 'goreng', 'буквально', 'жареный', 'рис', 'блюдо', 'ряда', 'национальных', 'кухонь', 'ЮгоВосточной', 'Азии', 'прежде', 'всего', 'индонезийской', 'Представляет', 'собой', 'обжаренную', 'в', 'растительном', 'масле', 'смесь', 'риса', 'с', 'измельчёнными', 'продуктами', 'животного', 'или', 'растительного', 'происхождения', 'По', 'мнению', 'большинства', 'специалистов', 'технология', 'приготовления', 'этого', 'кушанья', 'была', 'заимствована', 'в', 'середине', 'нашей', 'эры', 'из', 'китайской', 'кухни', 'Несмотря', 'на', 'внешнее', 'сходство', 'со', 'многими', 'блюдами', 'из', 'риса', 'широко', 'известными', 'на', 'Западе', 'пловом', 'паэльей', 'ризотто', 'джамбалайей', 'насигоренг', 'существенно', 'отличается', 'от', 'них', 'в', 'плане', 'кулинарной', 'технологии', 'прежде', 'всего', 'тем', 'что', 'для', 'его', 'приготовления', 'используется', 'уже', 'варёный', 'а', 'не', 'сырой', 'рис', 'Блюдо', 'имеет', 'множество', 'вариаций', 'в', 'плане', 'используемых', 'продуктов', 'и', 'приправ', 'Особой', 'популярностью', 'оно', 'пользуется', 'на', 'Яве', 'где', 'исторически', 'является', 'одним', 'из', 'главных', 'кулинарных', 'специалитетов', 'В', 'яванской', 'и', 'ряде', 'других', 'региональных', 'кухонь', 'Индонезии', 'порция', 'насигоренга', 'часто', 'дополняется', 'традиционным', 'комплексным', 'гарниром', 'в', 'который', 'обычно', 'входят', 'яичница', 'или', 'омлет', 'крупук', 'небольшое', 'количество', 'свежих', 'или', 'мочёных', 'овощей', 'несколько', 'шпажек', 'миниатюрного', 'шашлыка', 'сате', 'и', 'иногда', 'какието', 'другие', 'закуски', 'Кроме', 'того', 'в', 'некоторых', 'районах', 'Явы', 'иногда', 'практикуется', 'смешение', 'насигоренга', 'с', 'другими', 'кушаньями', 'в', 'частности', 'с', 'различными', 'видами', 'лапши', 'Помимо', 'Индонезии', 'блюдо', 'получило', 'весьма', 'широкое', 'распространение', 'в', 'Малайзии', 'Сингапуре', 'и', 'Брунее', 'а', 'также', 'определённую', 'популярность', 'за', 'пределами', 'ЮгоВосточной', 'Азии', 'прежде', 'всего', 'в', 'Нидерландах', 'При', 'этом', 'на', 'международном', 'уровне', 'оно', 'воспринимается', 'преимущественно', 'как', 'кулинарный', 'символ', 'именно', 'Индонезии']\n",
+      "{'имеет', 'различными', 'воспринимается', 'является', 'кулинарной', 'пределами', 'рис', 'животного', 'технологии', 'Кроме', 'исторически', 'сходство', 'некоторых', 'буквально', 'блюдами', 'индон', 'количество', 'лапши', 'кухни', 'блюдо', 'определённую', 'пловом', 'специалитетов', 'измельчёнными', 'смешение', 'кулинарный', 'кухонь', 'кушаньями', 'гарниром', 'них', 'ризотто', 'миниатюрного', 'ряде', 'жареный', 'часто', 'существенно', 'традиционным', 'Индонезии', 'риса', 'При', 'прежде', 'мнению', 'небольшое', 'его', 'В', 'также', 'goreng', 'из', 'преимущественно', 'специалистов', 'обычно', 'всего', 'пользуется', 'насигоренг', 'для', 'Насигоренг', 'китайской', 'вариаций', 'большинства', 'других', 'используется', 'ряда', 'Представляет', 'другими', 'известными', 'оно', 'одним', 'входят', 'распространение', 'малайск', 'Брунее', 'другие', 'а', 'Блюдо', 'какието', 'масле', 'продуктов', 'Помимо', 'именно', 'несколько', 'региональных', 'По', 'от', 'индонезийской', 'происхождения', 'уже', 'в', 'отличается', 'где', 'национальных', 'дополняется', 'этом', 'nasi', 'широко', 'обжаренную', 'практикуется', 'множество', 'Яве', 'кушанья', 'того', 'который', 'внешнее', 'как', 'шашлыка', 'ЮгоВосточной', 'многими', 'овощей', 'за', 'варёный', 'Западе', 'была', 'не', 'широкое', 'популярность', 'на', 'джамбалайей', 'омлет', 'яванской', 'иногда', 'Азии', 'или', 'весьма', 'заимствована', 'с', 'закуски', 'символ', 'Нидерландах', 'главных', 'комплексным', 'растительного', 'Особой', 'районах', 'приправ', 'порция', 'яичница', 'популярностью', 'используемых', 'сате', 'Сингапуре', 'насигоренга', 'международном', 'собой', 'приготовления', 'середине', 'и', 'паэльей', 'продуктами', 'сырой', 'частности', 'со', 'технология', 'уровне', 'нашей', 'крупук', 'шпажек', 'Явы', 'эры', 'что', 'тем', 'этого', 'получило', 'растительном', 'свежих', 'Малайзии', 'Несмотря', 'плане', 'смесь', 'кулинарных', 'видами', 'мочёных'}\n",
+      "81.34 %\n"
+     ]
+    }
+   ],
    "source": [
     "def lex_div(text):\n",
-    "  # your code here\n",
+    "  sec = [',', '.', '>', '<', '/', '?', '-', '_', '=', '+', '—', '(', ')', '«', '»']\n",
+    "  for p in sec:\n",
+    "    text = text.replace(p, '')\n",
+    "  all = text.split()\n",
+    "  print(all)\n",
+    "  uniq = set(all)\n",
+    "  print(uniq)\n",
+    "  return round(len(uniq) / len(all) * 100, 2)\n",
+    "  \n",
     "\n",
     "text = '''Наси-горенг (индон. и малайск. nasi goreng, буквально — «жареный рис») — блюдо ряда национальных кухонь Юго-Восточной Азии, прежде всего — индонезийской. Представляет собой обжаренную в растительном масле смесь риса с измельчёнными продуктами животного или растительного происхождения. По мнению большинства специалистов, технология приготовления этого кушанья была заимствована в середине нашей эры из китайской кухни.\n",
     "Несмотря на внешнее сходство со многими блюдами из риса, широко известными на Западе — пловом, паэльей, ризотто, джамбалайей, — наси-горенг существенно отличается от них в плане кулинарной технологии — прежде всего тем, что для его приготовления используется уже варёный, а не сырой рис.\n",
     "Блюдо имеет множество вариаций в плане используемых продуктов и приправ. Особой популярностью оно пользуется на Яве, где исторически является одним из главных кулинарных специалитетов. В яванской и ряде других региональных кухонь Индонезии порция наси-горенга часто дополняется традиционным комплексным гарниром, в который обычно входят яичница или омлет, крупук, небольшое количество свежих или мочёных овощей, несколько шпажек миниатюрного шашлыка сате и, иногда, какие-то другие закуски. Кроме того, в некоторых районах Явы иногда практикуется смешение наси-горенга с другими кушаньями, в частности, с различными видами лапши.\n",
     "Помимо Индонезии, блюдо получило весьма широкое распространение в Малайзии, Сингапуре и Брунее, а также определённую популярность за пределами Юго-Восточной Азии — прежде всего, в Нидерландах. При этом на международном уровне оно воспринимается преимущественно как «кулинарный символ» именно Индонезии.'''\n",
     "\n",
-    "lex_div(text)"
+    "print(lex_div(text), '%')"
    ]
   },
   {
@@ -158,15 +187,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "500992ad-640b-4218-94e5-6c6035ad3d9d",
    "metadata": {
     "id": "IN4HAHubQnZ3"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'ю', 'п', 'з', 'в', 'о', 'х', 'э', 'и', 'е', 'к', 'щ', 'ъ', 'г', 'м', 'й', 'л', 'б', 'ш', 'т', 'ч', 'р', 'я', 'ы', 'ё', 'д', 'ь', 'а', 'с', 'н', 'ж', 'у', 'ц', 'ф'}\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "1"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "def iscyrillic(string):\n",
-    "  # your code here"
+    "  cyr = {chr(el) for el in range(ord('а'), ord('я') + 1)}\n",
+    "  cyr.add('ё')\n",
+    "  print(cyr)\n",
+    "  string = set(string.split())\n",
+    "  return 1\n",
+    "\n",
+    "iscyrillic('ratyuiopk;jlhkjg')\n",
+    "  "
    ]
   },
   {
@@ -193,14 +247,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "ae278c69-c460-447a-967c-e59015cdff5c",
    "metadata": {
     "id": "h_uhLNfDRPza"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Москва\n",
+      "Армавир \n",
+      "Рим \n",
+      "Москва - уже вводилось! \n",
+      "1 - не на ту букву! \n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "x = input()\n",
+    "print(x)\n",
+    "all = set()\n",
+    "all.add(x)\n",
+    "last_l = x[len(x) - 1].upper()\n",
+    "while x != '1':\n",
+    "    x = input()\n",
+    "    print(x, end=' ')\n",
+    "    first_l = x[0]\n",
+    "    if first_l != last_l:\n",
+    "        print('- не на ту букву!', end=' ')\n",
+    "    else:\n",
+    "        last_l = x[len(x) - 1].upper()\n",
+    "    if x in all:\n",
+    "        print('- уже вводилось!', end=' ')\n",
+    "    all.add(x)\n",
+    "    print()\n"
    ]
   },
   {
@@ -234,14 +316,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "9d5fe55b-86e0-4c4a-bc7e-266f7b2cb551",
    "metadata": {
     "id": "iW7Qt3KASEGD"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[{'немец', 'франц', 'англ'}, {'испан', 'англ'}, {'кор', 'немец', 'тур', 'англ'}]\n",
+      "all_lang: {'немец', 'кор', 'испан', 'франц', 'тур', 'англ'}\n",
+      "all know: {'англ'}\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "# st = int(input('Студентов: '))\n",
+    "st_lang = [{'немец', 'франц', 'англ'}, {'испан', 'англ'}, {'кор', 'немец', 'тур', 'англ'}]\n",
+    "# for i in range(st):\n",
+    "#     lang = int(input('Языков: '))\n",
+    "#     st_lang.append({input() for j in range(lang)})\n",
+    "print(st_lang)\n",
+    "all_st_lang, all_lang = st_lang[0], set()\n",
+    "for stu in st_lang:\n",
+    "    all_lang |= stu\n",
+    "    all_st_lang &= stu\n",
+    "\n",
+    "print('all_lang:', all_lang)\n",
+    "print('all know:', all_st_lang)\n"
    ]
   },
   {
