--- a/term05/BASE/07-Sets/sem07.ipynb
+++ b/term05/BASE/07-Sets/sem07.ipynb
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 23,
    "id": "500992ad-640b-4218-94e5-6c6035ad3d9d",
    "metadata": {
     "id": "IN4HAHubQnZ3"
@@ -197,30 +197,18 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'ю', 'п', 'з', 'в', 'о', 'х', 'э', 'и', 'е', 'к', 'щ', 'ъ', 'г', 'м', 'й', 'л', 'б', 'ш', 'т', 'ч', 'р', 'я', 'ы', 'ё', 'д', 'ь', 'а', 'с', 'н', 'ж', 'у', 'ц', 'ф'}\n"
+      "False\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "1"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
     "def iscyrillic(string):\n",
     "  cyr = {chr(el) for el in range(ord('а'), ord('я') + 1)}\n",
     "  cyr.add('ё')\n",
-    "  print(cyr)\n",
-    "  string = set(string.split())\n",
-    "  return 1\n",
+    "  punc = {';', ',', '.', '>', '<', '/', '?', '-', '_', '=', '+', '—', '(', ')', '«', '»'}\n",
+    "  return set(string.lower()).difference(punc) <= (cyr)\n",
     "\n",
-    "iscyrillic('ratyuiopk;jlhkjg')\n",
-    "  "
+    "print(iscyrillic('cock;папа'))"
    ]
   },
   {
@@ -333,11 +321,12 @@
     }
    ],
    "source": [
-    "# st = int(input('Студентов: '))\n",
-    "st_lang = [{'немец', 'франц', 'англ'}, {'испан', 'англ'}, {'кор', 'немец', 'тур', 'англ'}]\n",
-    "# for i in range(st):\n",
-    "#     lang = int(input('Языков: '))\n",
-    "#     st_lang.append({input() for j in range(lang)})\n",
+    "st = int(input('Студентов: '))\n",
+    "# st_lang = [{'немец', 'франц', 'англ'}, {'испан', 'англ'}, {'кор', 'немец', 'тур', 'англ'}]\n",
+    "st_lang = list()\n",
+    "for i in range(st):\n",
+    "    lang = int(input('Языков: '))\n",
+    "    st_lang.append({input() for j in range(lang)})\n",
     "print(st_lang)\n",
     "all_st_lang, all_lang = st_lang[0], set()\n",
     "for stu in st_lang:\n",
