--- a/term06/BASE/01-Files, Exercise/group01_sem01.ipynb
+++ b/term06/BASE/01-Files, Exercise/group01_sem01.ipynb
@@ -116,23 +116,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "f29824ae-474c-49a4-8655-ddaca4d031a5",
    "metadata": {},
    "outputs": [],
    "source": [
     "def readconllu(path):\n",
-    "    data = {}\n",
-    "    with open(path, 'r', encoding='utf8') as f:\n",
-    "        for line in f:\n",
-    "            if line.startswith('# sent_id = '):\n",
-    "                key = line.strip()[len('# sent_id = ') + 1]\n",
-    "                data[key] = {'text': '', 'tokens': []}\n",
-    "            if line.startswith('# text = '):\n",
-    "                data[key]['text'] = line.strip()[len('# text = ') + 1:]\n",
-    "            if line[0].isdigit():\n",
-    "                data[key]['tokens'].append(line.strip().split('\\t'))\n",
-    "    return data\n",
+    "    # your code here\n",
     "\n",
     "data = readconllu('syntagrus_tiny.conllu')"
    ]
@@ -154,43 +144,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "d0d05d7b-0d79-45eb-92d0-cc41359b2a6b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "POS          %\n",
-      "ADP    :   9.7\n",
-      "NUM    :   3.2\n",
-      "NOUN   :  25.8\n",
-      "PUNCT  :  12.9\n",
-      "VERB   :  19.4\n",
-      "CCONJ  :   6.5\n",
-      "ADJ    :   9.7\n",
-      "ADV    :   6.5\n",
-      "PROPN  :   6.5\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "from collections import Counter\n",
-    "\n",
-    "def poscounter(data): \n",
-    "    count = Counter()\n",
-    "    for sent in data:\n",
-    "        for token in data[sent]['tokens']:\n",
-    "            count[token[3]] += 1\n",
-    "    long = max([len(x) for x in count]) + 2\n",
-    "    total = sum(list(count.values()))\n",
-    "    print(\"POS\" + ' ' * long + '   %')\n",
-    "    for key, value in count.items():\n",
-    "        print(f\"{key:<{long}}:  {round(value * 100 / total, 1):>4.1f}\")\n",
-    "    return count\n",
-    "\n",
-    "count = poscounter(data)"
+    "# your code here"
    ]
   },
   {
@@ -205,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "id": "c9974da6-0310-495c-9741-989befe3639e",
    "metadata": {},
    "outputs": [
@@ -220,12 +179,6 @@
    "source": [
     "def uniquewords(data):\n",
     "    # your code here\n",
-    "    unique = 0\n",
-    "    for sent in data:\n",
-    "        for token in data[sent]['tokens']:\n",
-    "            if token[3] != 'PUNCT':\n",
-    "                unique += 1\n",
-    "    print(unique)\n",
     "\n",
     "uniquewords(data)"
    ]
@@ -242,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "ab785ac6-e6b0-4c77-8610-bd31345e3753",
    "metadata": {},
    "outputs": [
@@ -257,15 +210,6 @@
    "source": [
     "def lemmas(data):\n",
     "    #your code here\n",
-    "    count = 0\n",
-    "    countnolower = 0\n",
-    "    for sent in data:\n",
-    "        for token in data[sent]['tokens']:\n",
-    "            if token[1].lower() == token[2].lower():\n",
-    "                count += 1 \n",
-    "            if token[1] == token[2]:\n",
-    "                countnolower += 1\n",
-    "    print(f'С учетом регистра: {countnolower}, без учета регистра: {count}')\n",
     "\n",
     "lemmas(data)"
    ]
