--- a/term05/BASE/09-Files/sem09.ipynb
+++ b/term05/BASE/09-Files/sem09.ipynb
@@ -34,7 +34,13 @@
    },
    "outputs": [],
    "source": [
-    "# my code here"
+    "punct = ''',.!?\";:()'''\n",
+    "wordlist = []\n",
+    "with open('1.txt', 'r', encoding='utf8') as f:\n",
+    "    for line in f:\n",
+    "        words = [w.strip(punct) for w in line.strip().split()]\n",
+    "        wordlist.extend(words)\n",
+    "wordlist"
    ]
   },
   {
@@ -66,7 +72,9 @@
    },
    "outputs": [],
    "source": [
-    "# my code here"
+    "with open('words.txt', 'w', encoding='utf') as file:\n",
+    "        for word in wordlist:\n",
+    "                print(word, file=file)"
    ]
   },
   {
@@ -88,7 +96,21 @@
    },
    "outputs": [],
    "source": [
-    "# my code here"
+    "from collections import Counter\n",
+    "import pickle\n",
+    "\n",
+    "wordfreqs = Counter(wordlist)\n",
+    "pickle.dump(wordfreqs, open('wordfreqs', 'wb'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e24efde",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pickle.load(open('wordfreqs', 'rb'))"
    ]
   },
   {
@@ -150,7 +172,15 @@
    },
    "outputs": [],
    "source": [
-    "# my code here"
+    "import json\n",
+    "\n",
+    "tweets = []\n",
+    "with open('google.json') as google:\n",
+    "    for line in google:\n",
+    "        tweet = json.loads(line)\n",
+    "        tweets.append(tweet['tweet'])\n",
+    "\n",
+    "tweets[:3]"
    ]
   },
   {
@@ -208,7 +238,17 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "with open('01-1.txt') as file:\n",
+    "    a = file.readlines()\n",
+    "b = []\n",
+    "for line in a:\n",
+    "    if '@' not in line:\n",
+    "        b.append(line)\n",
+    "b.sort()\n",
+    "\n",
+    "with open('newfile.txt', 'w') as file:\n",
+    "    for line in b:\n",
+    "        file.write(line + '\\n')"
    ]
   },
   {
@@ -246,7 +286,12 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "with open('01-2.txt', encoding='utf') as file, open('new_file', 'w', encoding='utf8') as file2:\n",
+    "    for line in file:\n",
+    "        a = line.strip.split()\n",
+    "        for i in range(len(a)):\n",
+    "            a[i] = a[i][::-1]\n",
+    "        print(' '.join(a), file=file)"
    ]
   },
   {
@@ -268,7 +313,13 @@
    },
    "outputs": [],
    "source": [
-    "# your code here"
+    "import os\n",
+    "\n",
+    "txt = 'ther is a text about X'\n",
+    "os.makedirs('myfolder/myfile',exist_ok=True)\n",
+    "with open('myfolder?myfile/milicioner.txt', 'w', encodinf='utf8') as f:\n",
+    "    f.write(txt)\n",
+    "    "
    ]
   },
   {
