--- a/term05/BASE/10-Test/final_test.ipynb
+++ b/term05/BASE/10-Test/final_test.ipynb
@@ -14,12 +14,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "da08c161-376e-481c-8f29-6a3f65225167",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
    "source": [
-    "# your code here"
+    "start = (2, 4)\n",
+    "stop = (0, 5)\n",
+    "print(True) if abs(start[0] - stop[0]) + abs(start[1] - stop[1]) == 3 else print(False)"
    ]
   },
   {
@@ -47,15 +57,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "fa1f9590-41c1-4d1e-9132-90b308898a1e",
    "metadata": {},
    "outputs": [],
    "source": [
     "def dig_pow(n, p):\n",
-    "    # your code here\n",
+    "    res, count = 0, 0\n",
+    "    for sym in str(n):\n",
+    "        res += int(sym) ** (p + count)\n",
+    "        count += 1\n",
+    "    return res // n if res % n == 0 else -1\n",
+    "    \n",
     "    \n",
     "assert all([dig_pow(89, 1) == 1, dig_pow(92, 1) == -1, dig_pow(695, 2) == 2, dig_pow(46288, 3) == 51])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "76e831b6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "51\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(dig_pow(46288, 3))"
    ]
   },
   {
@@ -74,16 +107,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 25,
    "id": "2e72fcc5-3261-45ab-b771-ca2a02329392",
    "metadata": {},
    "outputs": [],
    "source": [
     "def mse(y_true, y_pred):\n",
     "    # y_true и y_pred - списки чисел\n",
-    "    #your code here\n",
+    "    chisl = 0\n",
+    "    for ind in range(len(y_true)):\n",
+    "        chisl += (y_true[ind] - y_pred[ind]) ** 2\n",
+    "    total = chisl / len(y_pred)\n",
+    "    return total\n",
     "    \n",
     "assert all([mse([1, 2, 3], [4, 5, 6]) == 9.0, mse([10, 20, 10, 2], [10, 25, 5, -2]) == 16.5, mse([-1, 0], [0, -1]) == 1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "842c99e6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(mse([-1, 0], [0, -1]))"
    ]
   },
   {
@@ -98,13 +153,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 41,
    "id": "bf573c0e-7c2f-451a-a600-58524fed5bec",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "66.66666666666666%\n"
+     ]
+    }
+   ],
    "source": [
     "def percent(s1, s2):\n",
-    "    # your code here"
+    "    res = len(s2) / len(s1) * 100\n",
+    "    return res\n",
+    "\n",
+    "res = percent('mayaya', 'dady')\n",
+    "print(f'{res}%')"
    ]
   },
   {
@@ -125,7 +192,7 @@
    "outputs": [],
    "source": [
     "def the_counter(n):\n",
-    "    # your code here"
+    "    # не поняла ввод слов за один раз или эн раз"
    ]
   },
   {
@@ -162,18 +229,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def zero(): pass #your code here\n",
-    "def one(): pass #your code here\n",
-    "def two(): pass #your code here\n",
-    "def three(): pass #your code here\n",
-    "def four(): pass #your code here\n",
-    "def five(): pass #your code here\n",
-    "def six(): pass #your code here\n",
-    "def seven(): pass #your code here\n",
-    "def eight(): pass #your code here\n",
-    "def nine(): pass #your code here\n",
+    "def zero(arg=0): pass #your code here\n",
+    "def one(arg=1): pass #your code here\n",
+    "def two(arg=2): pass #your code here\n",
+    "def three(arg=3): pass #your code here\n",
+    "def four(arg=4): pass #your code here\n",
+    "def five(arg=5): pass #your code here\n",
+    "def six(arg=6): pass #your code here\n",
+    "def seven(arg=7): pass #your code here\n",
+    "def eight(arg=8): pass #your code here\n",
+    "def nine(arg=9): pass #your code here\n",
     "\n",
-    "def plus(): pass #your code here\n",
+    "def plus(k, x): pass #your code here\n",
     "def minus(): pass #your code here\n",
     "def times(): pass #your code here\n",
     "def divided_by(): pass #your code here\n",
@@ -368,7 +435,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -382,7 +449,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.11.9"
   }
  },
  "nbformat": 4,
